# vrdj

./: LICENSE  README.md  README.org  design.org  pyproject.toml
src/beetsplug/: vrdj.py
src/vrdj/: beetface.py  cli.py  db.py  op.py  scheme.py  store.py  util.py  vrdj.py
src/vrdj/embeddings/: __init__.py  vggish.py
