[project]
name = "vrdj"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brett Viren", email = "brett.viren@gmail.com" }
]
# torchvggish->resampy->numba and numba needs Python 3.9
requires-python = ">=3.9"
dependencies = [
    "beets",
    "click",
    "faiss-cpu",
    "numpy",
    "soundfile",
    "torch",
    "torchvggish",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
vrdj = "vrdj.cli:main"
